objects/Sales_Volume_Requirement__c.object
<CustomObject>
    <label>Sales Volume Requirement</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Sales Volume Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Volume Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year #</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apts_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australian Dollar (AUD)</fullName>
                </value>
                <value>
                    <fullName>Canadian Dollar (CAD)</fullName>
                </value>
                <value>
                    <fullName>Swiss Franc (CHF)</fullName>
                </value>
                <value>
                    <fullName>Danish Krone (DKK)</fullName>
                </value>
                <value>
                    <fullName>Euro (EUR)</fullName>
                </value>
                <value>
                    <fullName>British Pound (GBP)</fullName>
                </value>
                <value>
                    <fullName>Hong Kong Dollar (HKD)</fullName>
                </value>
                <value>
                    <fullName>Japanese Yen (JPY)</fullName>
                </value>
                <value>
                    <fullName>Korean Won (KRW)</fullName>
                </value>
                <value>
                    <fullName>Malaysian Ringgit (MYR)</fullName>
                </value>
                <value>
                    <fullName>Norwegian Krone (NOK)</fullName>
                </value>
                <value>
                    <fullName>Pilippine Peso (PJP)</fullName>
                </value>
                <value>
                    <fullName>Polish Zloty (PLN)</fullName>
                </value>
                <value>
                    <fullName>Swedish Krona (SEK)</fullName>
                </value>
                <value>
                    <fullName>Singapore Dollar (SGD)</fullName>
                </value>
                <value>
                    <fullName>Thai Baht (THB)</fullName>
                </value>
                <value>
                    <fullName>Taiwan Dollar (TWD)</fullName>
                </value>
                <value>
                    <fullName>South African Rand (ZAR)</fullName>
                </value>
                <value>
                    <fullName>United States Dollar (USD)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apts_Product_Line__c</fullName>
        <label>Product Line</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATOMIC ABSORPTION SPECTROSCOPY (AA)</fullName>
                </value>
                <value>
                    <fullName>APPLICATION SYSTEMS (APS)</fullName>
                </value>
                <value>
                    <fullName>ANALYTICAL PROTEOMICS (ANP)</fullName>
                </value>
                <value>
                    <fullName>AUTO ROBOTIC SYSTEMS (ARS)</fullName>
                </value>
                <value>
                    <fullName>aSi-GE (ASG)</fullName>
                </value>
                <value>
                    <fullName>aSi-PKI (ASP)</fullName>
                </value>
                <value>
                    <fullName>AUTOMATED WORKSTATIONS (AWS)</fullName>
                </value>
                <value>
                    <fullName>CALIPER LIQUID HANDLING (CLH)</fullName>
                </value>
                <value>
                    <fullName>CALIPER REAGENTS (CLR)</fullName>
                </value>
                <value>
                    <fullName>CUSTOM MANUFACTURING (CMG)</fullName>
                </value>
                <value>
                    <fullName>DEXELA - CMOS (CMS)</fullName>
                </value>
                <value>
                    <fullName>CELLULAR SCRN &amp; ADME (CSA)</fullName>
                </value>
                <value>
                    <fullName>DIAGNOSTICS (DIA)</fullName>
                </value>
                <value>
                    <fullName>DISTRIB PROD/OTHERLS (DIS)</fullName>
                </value>
                <value>
                    <fullName>DNA MEASUREMENTS (DNA)</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE SW SOLUTION (ESS)</fullName>
                </value>
                <value>
                    <fullName>FLOUR AGENTS PORTFOLIO (FAP)</fullName>
                </value>
                <value>
                    <fullName>FUNCTIONAL GENOM &amp; PROTEOM (FGP)</fullName>
                </value>
                <value>
                    <fullName>GAS CROMATOGRAPHY (GC)</fullName>
                </value>
                <value>
                    <fullName>HIGH CONTENT SCREENING (HCS)</fullName>
                </value>
                <value>
                    <fullName>SCREENING REAGENTS (HTS)</fullName>
                </value>
                <value>
                    <fullName>IMAGING &amp; ANALYSIS SOLN (IAS)</fullName>
                </value>
                <value>
                    <fullName>INDUCTIVELY COUPLED (ICP)</fullName>
                </value>
                <value>
                    <fullName>IN VIVO IMAGING (INV)</fullName>
                </value>
                <value>
                    <fullName>IR SPECTROSCOPY (IR)</fullName>
                </value>
                <value>
                    <fullName>LIQUID CHROMATOGRAPH (LC)</fullName>
                </value>
                <value>
                    <fullName>LC MASS SPEC (LCM)</fullName>
                </value>
                <value>
                    <fullName>INDUCTIVELY COUPLED (MAS)</fullName>
                </value>
                <value>
                    <fullName>MOLECULAR DIAGNOSTIC (MDX)</fullName>
                </value>
                <value>
                    <fullName>MICROFLUIDICS TECH (MFT)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Volume_Units__c</fullName>
        <label>Sales Volume (Units)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Volume_Currency__c</fullName>
        <label>Sales Volume (Currency)</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Volume_Required__c</fullName>
        <label>Sales Volume Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apts_Product_Line_Print__c</fullName>
        <description>To fill</description>
        <label>Product Line Print</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>